--- a/.github/workflows/yx_ips.yml
+++ b/.github/workflows/yx_ips.yml
@@ -3,7 +3,7 @@ name: YX IPs and DNS
 on:
   schedule:
     - cron: '0 8,20 * * *' # 每12小时运行一次
-  #workflow_dispatch: # 手动触发
+  workflow_dispatch: # 手动触发
 
 jobs:
   run-and-commit:
