--- a/.github/workflows/cloudflarest.yml
+++ b/.github/workflows/cloudflarest.yml
@@ -35,6 +35,6 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add FDIP/all.txt CloudflareST/ip.txt CloudflareST/yxip.txt CloudflareST/ip.csv
+        git add CloudflareST/ip.txt CloudflareST/yxip.txt CloudflareST/ip.csv
         git commit -m "Add IP fdIPs with speed > 5mb/s"
         git push
