--- a/.github/workflows/auto-update-ip.yml
+++ b/.github/workflows/auto-update-ip.yml
@@ -22,8 +22,8 @@ jobs:
           curl -s https://raw.githubusercontent.com/yutian81/CFCDN-Auto/main/sgfd_ips.txt -o ${GITHUB_WORKSPACE}/sgfd_ips.txt 
           echo Get fdip
           curl -s https://raw.githubusercontent.com/yutian81/CFCDN-Auto/main/FDIP/all.txt -o ${GITHUB_WORKSPACE}/FDIP/all.txt
-          echo Get sgcs
-          curl -s https://raw.githubusercontent.com/yutian81/CFCDN-Auto/main/CloudflareST/sgcs.txt -o ${GITHUB_WORKSPACE}/CloudflareST/sgcs.txt
+          #echo Get sgcs
+          #curl -s https://raw.githubusercontent.com/yutian81/CFCDN-Auto/main/CloudflareST/sgcs.txt -o ${GITHUB_WORKSPACE}/CloudflareST/sgcs.txt
           
       - name: Creat Message
         id: msg
