--- a/.github/workflows/sgip_speed_test.yml
+++ b/.github/workflows/sgip_speed_test.yml
@@ -37,4 +37,4 @@ jobs:
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add FDIP/all.txt CloudflareST/sg.txt CloudflareST/sgcs.txt CloudflareST/sg.csv
         git commit -m "Add SG fdIPs with speed > 5mb/s"
-        git pull
+        git push
