--- a/.github/workflows/sgip_speed_test.yml
+++ b/.github/workflows/sgip_speed_test.yml
@@ -30,11 +30,4 @@ jobs:
       run: |
         chmod +x FDIP-cesu.sh
         ./FDIP-cesu.sh
-
-    - name: Commit and push results
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add FDIP/all.txt CloudflareST/sg.txt CloudflareST/sgcs.txt CloudflareST/sg.csv
-        git commit -m "Add SG fdIPs with speed > 5mb/s"
-        git push
+    - uses: stefanzweifel/git-auto-commit-action@v5
