--- a/.github/workflows/yx_ips.yml
+++ b/.github/workflows/yx_ips.yml
@@ -3,8 +3,8 @@ name: YX IPs and DNS
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 8,20 * * *' # 每12小时运行一次
-  #workflow_dispatch: # 手动触发
+    - cron: '0 */4 * * *' # 每4小时运行一次
+  workflow_dispatch: # 手动触发
 
 jobs:
   run-and-commit:
